--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -8,54 +8,132 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-10 17:55+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2023-04-15 19:14+0000\n"
+"PO-Revision-Date: 2023-04-15 19:17+0000\n"
+"Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n"
-"%100>=11 && n%100<=14)? 2 : 3);\n"
+"Plural-Forms: nplurals=4; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<12 || n%100>14) ? 1 : n%10==0 || (n%10>=5 && n%10<=9) || (n%100>=11 && n%100<=14)? 2 : 3);\n"
+"X-Translated-Using: django-rosetta 0.9.8\n"
 
-#: api/models.py:6
+#: api/models.py:9 api/models.py:55 api/models.py:70 api/models.py:84
+#: api/models.py:98 api/models.py:112 api/models.py:129
 msgid "title"
-msgstr ""
-
-#: api/models.py:7
-msgid "descriptions"
-msgstr ""
-
-#: api/models.py:8
-msgid "image"
-msgstr ""
-
-#: api/models.py:9
-msgid "link"
-msgstr ""
+msgstr "Название"
 
 #: api/models.py:10
+msgid "descriptions"
+msgstr "Описания"
+
+#: api/models.py:11 api/models.py:54
+msgid "image"
+msgstr "изображения"
+
+#: api/models.py:12 api/models.py:57
+msgid "link"
+msgstr "линк"
+
+#: api/models.py:13 api/models.py:42 api/models.py:58 api/models.py:72
+#: api/models.py:86 api/models.py:100 api/models.py:116 api/models.py:132
 msgid "created_at"
-msgstr ""
+msgstr "время создания"
 
-#: api/models.py:11
+#: api/models.py:14 api/models.py:43 api/models.py:59 api/models.py:73
+#: api/models.py:87 api/models.py:101 api/models.py:117 api/models.py:133
 msgid "updated_at"
-msgstr ""
+msgstr "время обновления"
 
-#: api/models.py:17
+#: api/models.py:20
 msgid "Carousel"
-msgstr ""
+msgstr "Карусель"
 
-#: api/models.py:18
+#: api/models.py:21
 msgid "Carousels"
-msgstr ""
+msgstr "Карусели"
 
-#: bank/settings.py:104
+#: api/models.py:38
+msgid "borrower_type"
+msgstr "Тип заема"
+
+#: api/models.py:39
+msgid "loan_amount"
+msgstr "Колво физ"
+
+#: api/models.py:40
+msgid "loan_term"
+msgstr "кредит "
+
+#: api/models.py:41
+msgid "interest_rate"
+msgstr "кредит чо то"
+
+#: api/models.py:49
+msgid "Calculator"
+msgstr "Калькулятор"
+
+#: api/models.py:50
+msgid "Calculators"
+msgstr "калькуляторы"
+
+#: api/models.py:56 api/models.py:71 api/models.py:113 api/models.py:130
+msgid "description"
+msgstr "опиание"
+
+#: api/models.py:65 api/models.py:66
+msgid "Product"
+msgstr "продукт"
+
+#: api/models.py:79
+msgid "FAQ"
+msgstr "ЧДБ"
+
+#: api/models.py:80
+msgid "FAQs"
+msgstr "ЧДБ"
+
+#: api/models.py:85 api/models.py:99
+msgid "subtitle"
+msgstr "суб"
+
+#: api/models.py:93 api/models.py:94
+msgid "Who can get a loan?"
+msgstr "Кто сможет"
+
+#: api/models.py:107
+msgid "What documents are needed?"
+msgstr "какие док"
+
+#: api/models.py:108
+msgid "What documents are needed"
+msgstr "что ты"
+
+#: api/models.py:114
+msgid "first_image"
+msgstr "изоб"
+
+#: api/models.py:115
+msgid "second_image"
+msgstr "изоб2"
+
+#: api/models.py:123 api/models.py:124
+msgid "Type of loans"
+msgstr "тип кр"
+
+#: api/models.py:131
+msgid "long_description"
+msgstr "длинное описание"
+
+#: api/models.py:139 api/models.py:140
+msgid "Legal Entities"
+msgstr "легал"
+
+#: bank/settings.py:122
 msgid "Russian"
-msgstr ""
+msgstr "рус"
 
-#: bank/settings.py:105
+#: bank/settings.py:123
 msgid "Uzbek"
-msgstr ""
+msgstr "уз"
