--- a/locale/uz/LC_MESSAGES/django.po
+++ b/locale/uz/LC_MESSAGES/django.po
@@ -8,52 +8,132 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-10 17:55+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2023-04-15 19:14+0000\n"
+"PO-Revision-Date: 2023-04-15 19:19+0000\n"
+"Last-Translator:   <>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
+"X-Translated-Using: django-rosetta 0.9.8\n"
 
-#: api/models.py:6
+#: api/models.py:9 api/models.py:55 api/models.py:70 api/models.py:84
+#: api/models.py:98 api/models.py:112 api/models.py:129
 msgid "title"
-msgstr ""
-
-#: api/models.py:7
-msgid "descriptions"
-msgstr ""
-
-#: api/models.py:8
-msgid "image"
-msgstr ""
-
-#: api/models.py:9
-msgid "link"
-msgstr ""
+msgstr "Nomi"
 
 #: api/models.py:10
+msgid "descriptions"
+msgstr "Tavsifi"
+
+#: api/models.py:11 api/models.py:54
+msgid "image"
+msgstr "rasmi"
+
+#: api/models.py:12 api/models.py:57
+msgid "link"
+msgstr "ssilkasi"
+
+#: api/models.py:13 api/models.py:42 api/models.py:58 api/models.py:72
+#: api/models.py:86 api/models.py:100 api/models.py:116 api/models.py:132
 msgid "created_at"
-msgstr ""
+msgstr "vohti"
 
-#: api/models.py:11
+#: api/models.py:14 api/models.py:43 api/models.py:59 api/models.py:73
+#: api/models.py:87 api/models.py:101 api/models.py:117 api/models.py:133
 msgid "updated_at"
-msgstr ""
+msgstr "ozgartrlgan"
 
-#: api/models.py:17
+#: api/models.py:20
 msgid "Carousel"
-msgstr ""
+msgstr "carde"
 
-#: api/models.py:18
+#: api/models.py:21
 msgid "Carousels"
-msgstr ""
+msgstr "carlar"
 
-#: bank/settings.py:104
+#: api/models.py:38
+msgid "borrower_type"
+msgstr "kredit ekan"
+
+#: api/models.py:39
+msgid "loan_amount"
+msgstr "uzun kredit"
+
+#: api/models.py:40
+msgid "loan_term"
+msgstr "vashe credit"
+
+#: api/models.py:41
+msgid "interest_rate"
+msgstr "tip credit"
+
+#: api/models.py:49
+msgid "Calculator"
+msgstr "calculat"
+
+#: api/models.py:50
+msgid "Calculators"
+msgstr "calcurlatlar"
+
+#: api/models.py:56 api/models.py:71 api/models.py:113 api/models.py:130
+msgid "description"
+msgstr "tavsifi"
+
+#: api/models.py:65 api/models.py:66
+msgid "Product"
+msgstr "mahsulot"
+
+#: api/models.py:79
+msgid "FAQ"
+msgstr "KMU"
+
+#: api/models.py:80
+msgid "FAQs"
+msgstr "KMu"
+
+#: api/models.py:85 api/models.py:99
+msgid "subtitle"
+msgstr "maqola"
+
+#: api/models.py:93 api/models.py:94
+msgid "Who can get a loan?"
+msgstr "kim nma"
+
+#: api/models.py:107
+msgid "What documents are needed?"
+msgstr "bizga kerak"
+
+#: api/models.py:108
+msgid "What documents are needed"
+msgstr "sangakere"
+
+#: api/models.py:114
+msgid "first_image"
+msgstr "rasm"
+
+#: api/models.py:115
+msgid "second_image"
+msgstr "kotrasm"
+
+#: api/models.py:123 api/models.py:124
+msgid "Type of loans"
+msgstr "keim"
+
+#: api/models.py:131
+msgid "long_description"
+msgstr "karim"
+
+#: api/models.py:139 api/models.py:140
+msgid "Legal Entities"
+msgstr "kota"
+
+#: bank/settings.py:122
 msgid "Russian"
-msgstr ""
+msgstr "rusde"
 
-#: bank/settings.py:105
+#: bank/settings.py:123
 msgid "Uzbek"
-msgstr ""
+msgstr "ozbe"
